testing one change

--- a/home.html
+++ b/home.html
@@ -289,7 +289,7 @@
         <div class="col-md-12 text-center py-5">
           <p>
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        <a href="https://colorlib.com" target="_blank" >Colorlib</a> Template Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.facebook.com/neha.qomp">nehaQ</a>
+        <a href="https://colorlib.com" target="_blank" >Colorlib</a> Template Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.facebook.com/neha.qomp">nehaq</a>
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
       </p>
         </div>
