--- a/sports.html
+++ b/sports.html
@@ -44,7 +44,7 @@
 
   <header class="header-bar d-flex d-lg-block align-items-center">
     <div class="site-logo">
-      <a href="home.html">Souvik Banerjee Photography</a>
+      <a href="index.html">Souvik Banerjee Photography</a>
     </div>
     
     <div class="d-inline-block d-xl-none ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
@@ -287,20 +287,20 @@
         <!-- cdsfsnfkjns -->
         
 
-        <div class="col-6 col-md-6 col-lg-9" data-aos="fade-up">
+       <!--  <div class="col-6 col-md-6 col-lg-9" data-aos="fade-up">
           <a href="images/4_Sports/IMG_1.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_1.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+        </div> -->
+       <!--  <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_11.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_11.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
+        </div> -->
 
         <div class="col-6 col-md-6 col-lg-7" data-aos="fade-up">
           <a href="images/4_Sports/IMG_3.jpg" class="d-block photo-item" data-fancybox="gallery">
@@ -317,59 +317,59 @@
           </a>
         </div>
 
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
+        <!-- <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
           <a href="images/4_Sports/IMG_2.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_2.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        </div> -->
+        <!-- <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_5.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_5.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
+        </div> -->
 
-        <div class="col-6 col-md-6 col-lg-7" data-aos="fade-up">
+        <!-- <div class="col-6 col-md-6 col-lg-7" data-aos="fade-up">
           <a href="images/4_Sports/IMG_6.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_6.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
+        </div> -->
+        <!-- <div class="col-6 col-md-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_7.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_7.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
+        </div> -->
 
-        <div class="col-6 col-md-6 col-lg-9" data-aos="fade-up">
+        <div class="col-6 col-md-6 col-lg-12" data-aos="fade-up">
           <a href="images/4_Sports/IMG_9.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_9.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+        <!-- <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_8.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_8.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
+        </div> -->
 
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
+        <!-- <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
           <a href="images/4_Sports/IMG_10.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_10.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        </div> -->
+        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_15.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_15.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
@@ -384,7 +384,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-6 col-lg-8" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_16.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_16.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
@@ -422,20 +422,20 @@
           </a>
         </div>
 
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
+        <!-- <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
           <a href="images/4_Sports/IMG_21.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_21.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        </div> -->
+        <!-- <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_22.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_22.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
+        </div> -->
 
         <div class="col-6 col-md-6 col-lg-7" data-aos="fade-up">
           <a href="images/4_Sports/IMG_20.jpg" class="d-block photo-item" data-fancybox="gallery">
@@ -475,22 +475,22 @@
           </a>
         </div>
 
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
-          <a href="images/4_Sports/IMG_27.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/4_Sports/IMG_27.jpg" alt="Image" class="img-fluid">
+        <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up">
+          <a href="images/4_Sports/IMG_26.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/4_Sports/IMG_26.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <!-- <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_28.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_28.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
+        </div> -->
 
-        <div class="col-6 col-md-6 col-lg-9" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <a href="images/4_Sports/IMG_30.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/4_Sports/IMG_30.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
@@ -498,8 +498,8 @@
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up">
-          <a href="images/4_Sports/IMG_26.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/4_Sports/IMG_26.jpg" alt="Image" class="img-fluid">
+          <a href="images/4_Sports/IMG_27.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/4_Sports/IMG_27.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
