--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 
 
           <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up">
-            <a href="images/3_Dance/IMG_14.jpg" class="photo-item" data-fancybox="gallery">
-              <img src="images/3_Dance/IMG_14.jpg" alt="Image" class="img-fluid">
+            <a href="images/2_Portraits/IMG_56.jpg" class="photo-item" data-fancybox="gallery">
+              <img src="images/2_Portraits/IMG_56.jpg" alt="Image" class="img-fluid">
                 <!-- <div class="photo-text-more">
                 <h3 class="heading">Shrey</h3>
                 <span class="meta">9 Photos</span>
