--- a/movement.html
+++ b/movement.html
@@ -44,7 +44,7 @@
 
   <header class="header-bar d-flex d-lg-block align-items-center">
     <div class="site-logo">
-      <a href="home.html">Souvik Banerjee Photography</a>
+      <a href="index.html">Souvik Banerjee Photography</a>
     </div>
     
     <div class="d-inline-block d-xl-none ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
@@ -393,27 +393,27 @@
             </a>
           </div>
 
-          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+          <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
             <a href="images/3_Dance/HLT/IMG_14.jpg" class="d-block photo-item" data-fancybox="gallery">
               <img src="images/3_Dance/HLT/IMG_14.jpg" alt="Image" class="img-fluid">
               <div class="photo-text-more">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <a href="images/3_Dance/HLT/IMG_15.jpg" class="d-block photo-item" data-fancybox="gallery">
               <img src="images/3_Dance/HLT/IMG_15.jpg" alt="Image" class="img-fluid">
               <div class="photo-text-more">
               </div>
             </a>
           </div>
-          <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+          <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
             <a href="images/3_Dance/HLT/IMG_16.jpg" class="d-block photo-item" data-fancybox="gallery">
               <img src="images/3_Dance/HLT/IMG_16.jpg" alt="Image" class="img-fluid">
               <div class="photo-text-more">
               </div>
             </a>
-          </div>
+          </div> -->
 
           <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
             <a href="images/3_Dance/HLT/IMG_17.jpg" class="d-block photo-item" data-fancybox="gallery">
