--- a/personal.html
+++ b/personal.html
@@ -43,7 +43,7 @@
 
   <header class="header-bar d-flex d-lg-block align-items-center">
     <div class="site-logo">
-      <a href="home.html">Souvik Banerjee Photography</a>
+      <a href="index.html">Souvik Banerjee Photography</a>
     </div>
     
     <div class="d-inline-block d-xl-none ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
