--- a/portrait.html
+++ b/portrait.html
@@ -567,7 +567,14 @@
             </div>
           </a>
         </div> -->
-        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-6 col-md-6 col-lg-5" data-aos="fade-up" data-aos-delay="100">
+          <a href="images/2_Portraits/IMG_69.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/2_Portraits/IMG_69.jpg" alt="Image" class="img-fluid">
+            <div class="photo-text-more">
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-6 col-lg-7" data-aos="fade-up" data-aos-delay="100">
           <a href="images/2_Portraits/IMG_49.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/2_Portraits/IMG_49.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
