--- a/portrait.html
+++ b/portrait.html
@@ -248,16 +248,23 @@
           </a>
         </div>
         
-        <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up">
+        <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
           <a href="images/2_Portraits/IMG_67.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/2_Portraits/IMG_67.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up">
+        <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
           <a href="images/2_Portraits/IMG_43.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/2_Portraits/IMG_43.jpg" alt="Image" class="img-fluid">
+            <div class="photo-text-more">
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
+          <a href="images/2_Portraits/IMG_68.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/2_Portraits/IMG_68.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
@@ -270,12 +277,13 @@
           </a>
         </div>
         <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up">
-          <a href="images/2_Portraits/IMG_68.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/2_Portraits/IMG_68.jpg" alt="Image" class="img-fluid">
+          <a href="images/2_Portraits/IMG_63.jpg" class="d-block photo-item" data-fancybox="gallery">
+            <img src="images/2_Portraits/IMG_63.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
         </div>
+        
 
         <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up">
           <a href="images/2_Portraits/IMG_9.jpg" class="d-block photo-item" data-fancybox="gallery">
