change in position

--- a/portrait.html
+++ b/portrait.html
@@ -226,21 +226,21 @@
 
 
         
-        <div class="col-6 col-md-6 col-lg-3" data-aos="fade-up">
+        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
           <a href="images/2_Portraits/IMG_65.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/2_Portraits/IMG_65.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+        <!-- <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
           <a href="images/2_Portraits/IMG_66.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/2_Portraits/IMG_66.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
             </div>
           </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-5" data-aos="fade-up">
+        </div> -->
+        <div class="col-6 col-md-6 col-lg-6" data-aos="fade-up">
           <a href="images/2_Portraits/IMG_64.jpg" class="d-block photo-item" data-fancybox="gallery">
             <img src="images/2_Portraits/IMG_64.jpg" alt="Image" class="img-fluid">
             <div class="photo-text-more">
